fixed the spacing a bit and added a welcome to our quiz

--- a/app/assets/stylesheets/questions/_show.scss
+++ b/app/assets/stylesheets/questions/_show.scss
@@ -1,8 +1,12 @@
 .show-container {
   text-align: center;
-  margin-top: 20px;
 }
 
 .option-type {
   margin-top: 45px;
+}
+
+.quiz-welcome {
+  margin-top: 20px;
+  margin-bottom: 45px;
 }
